Add styles inside main.scss

--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,18 @@
+img {
+  width: 100px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 10px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 
-/*# sourceMappingURL=main.css.map *//*# sourceMappingURL=main.css.map */
+.username {
+  font-weight: bold;
+}
+
+em {
+  color: red;
+  font-style: normal;
+}/*# sourceMappingURL=main.css.map */
