--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,12 @@
-img {
-  width: 100px;
-  border-radius: 50px;
-  float: left;
-  margin-right: 10px;
-
-  height: 100px;
-  object-fit: cover;
-}
+//img {
+//  width: 100px;
+//  border-radius: 50px;
+//  float: left;
+//  margin-right: 10px;
+//
+//  height: 100px;
+//  object-fit: cover;
+//}
 
 .username {
   font-weight: bold;
