--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+body {
+    background: #f2f2f2;
+    margin: 0;
+    font-family: Poppins;
+}
+
+
 /*img {*/
 /*  width: 100px;*/
 /*  border-radius: 50px;*/
@@ -8,13 +17,13 @@
 /*     object-fit: cover;*/
 /*}*/
 
-.username {
-  font-weight: bold;
-}
+/*.username {*/
+/*  font-weight: bold;*/
+/*}*/
 
-em {
-  color: red;
-  font-style: normal;
-}
+/*em {*/
+/*  color: red;*/
+/*  font-style: normal;*/
+/*}*/
 
 /*# sourceMappingURL=main.css.map */
