--- a/css/main.scss
+++ b/css/main.scss
@@ -8,11 +8,11 @@
 //  object-fit: cover;
 //}
 
-.username {
-  font-weight: bold;
-}
-
-em {
-  color: red;
-  font-style: normal;
-}
+//.username {
+//  font-weight: bold;
+//}
+//
+//em {
+//  color: red;
+//  font-style: normal;
+//}
