Add css to logo class

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,13 @@ body {
     padding: 1em;
 }
 
+.logo {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: 1.2em;
+}
+
 
 /*img {*/
 /*  width: 100px;*/
