Add css to container class

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,11 @@ nav {
     display: none;
 }
 
+.container {
+    display: flex;
+    place-content: space-between;
+}
+
 
 /*img {*/
 /*  width: 100px;*/
