--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,12 @@ a {
     color: #444444;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 
 /*img {*/
 /*  width: 100px;*/
