--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,12 @@ section {
     letter-spacing: 0.3em;
 }
 
+h1 {
+    font-size: 2.5em;
+    line-height: 1.3em;
+    margin-top: 0.2em;
+}
+
 
 /*img {*/
 /*  width: 100px;*/
