--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,14 @@ li {
     border-radius: 1em;
 }
 
+.testimonials-section-img {
+    width: 5em;
+    height: 5em;
+    border: 5px solid #006bd6;
+    border-radius: 50%;
+    margin-top: -4.5em;
+}
+
 
 /*img {*/
 /*  width: 100px;*/
