--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ img {
 }
 
 .hero-img {
-    width: 70%;
+    width: 22%;
     margin-top: 3em;
 }
 
@@ -136,6 +136,12 @@ li {
 
 h2 {
     font-size: 2em;
+}
+
+label {
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
 }
 
 /*img {*/
