--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,15 @@ label {
     margin-bottom: 0.5em;
 }
 
+input, textarea {
+    width: 100%;
+    padding: 0.8em;
+    margin-bottom: 1em;
+    border-radius: 0.3em;
+    border: 1px solid gray;
+    box-sizing: border-box;
+}
+
 /*img {*/
 /*  width: 100px;*/
 /*  border-radius: 50px;*/
