Add css to input button

--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,20 @@ input, textarea {
     box-sizing: border-box;
 }
 
+input[type="submit"] {
+    background-color: #007af3;
+    color: white;
+    font-weight: bold;
+    font-size: 1.3em;
+    border: none;
+    margin-bottom: 5em;
+    border-radius: 5em;
+    display: inline-block;
+    padding: 0.8em 2em;
+    width: unset;
+    cursor: pointer;
+}
+
 /*img {*/
 /*  width: 100px;*/
 /*  border-radius: 50px;*/
