--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,11 @@ iframe {
     height: 500px;
 }
 
+.holding-phone {
+    width: 300px;
+    height: 250px;
+}
+
 /*img {*/
 /*  width: 100px;*/
 /*  border-radius: 50px;*/
